<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_network_status"
        android:icon="@drawable/ic_print"
        android:title="@string/connectPrinterTitle"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_card_reader"
        android:icon="@drawable/ic_credit_card"
        android:title="@string/connectPrinterTitle"
        app:showAsAction="always" />

    <item android:id="@+id/action_Refresh"
        android:icon="@drawable/ic_autorenew"
        android:title="@string/menuitem_refresh"
        app:showAsAction="always" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"/>
</menu>