<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layLogin"
    android:background="@color/colorPrimaryDark"
    tools:ignore="MissingPrefix"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".presentation.view.activity.MainActivity">

    <ImageView
        android:id="@+id/configImgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_settings" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/textAppNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/dhukan.me"
        android:textColor="@color/pale_grey"
        fontPath="fonts/GothamRounded-Medium.otf"
        android:textSize="@dimen/activity_login_label_size" />

    <TextView
        android:id="@+id/txtLoginForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginForm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/loginToBegin"
        fontPath="fonts/GothamRounded-Book.otf"
        android:textColor="@color/white"
        android:textSize="@dimen/activity_login_label_size" />

    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/login_form_margin"
        android:layout_marginRight="@dimen/login_form_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_form_edittext_height"
            android:background="@drawable/rounded_border_edittext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:gravity="center_vertical|center"
            android:hint="@string/hint_username"
            fontPath="fonts/GothamRounded-Book.otf"
            android:textSize="@dimen/activity_login_text_size" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_form_edittext_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextUser"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_border_edittext"
            android:ems="10"
            android:gravity="center_vertical|center"
            android:hint="@string/hint_password"
            fontPath="fonts/GothamRounded-Book.otf"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:textSize="@dimen/activity_login_text_size" />

        <Spinner
            android:id="@+id/spinnerWarhouse"
            android:background="@drawable/custom_spinner_background"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:layout_below="@+id/spinnerOrg"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/rememberMe"
                fontPath="fonts/GothamRounded-Book.otf"
                android:textColor="@color/dark_grey_blue"
                android:textSize="@dimen/activity_login_label_size" />

            <TextView
                android:id="@+id/textForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/forgot"
                fontPath="fonts/GothamRounded-Book.otf"
                android:textColor="@color/dark_grey_blue"
                android:textSize="@dimen/activity_login_label_size" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_below="@+id/spinnerWarhouse"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_border_button"
            android:text="@string/btnLogin"
            fontPath="fonts/GothamRounded-Medium.otf"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_login_text_size" />

    </LinearLayout>

</RelativeLayout>
